<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/menu_browse_files"
        android:title="@string/browse_files" />
        
    <item
        android:id="@+id/menu_timer"
        android:title="@string/timer">
        <menu>
            <item
                android:id="@+id/timer_off"
                android:title="@string/timer_off" />
            <item
                android:id="@+id/timer_15"
                android:title="@string/timer_15_min" />
            <item
                android:id="@+id/timer_30"
                android:title="@string/timer_30_min" />
            <item
                android:id="@+id/timer_45"
                android:title="@string/timer_45_min" />
            <item
                android:id="@+id/timer_60"
                android:title="@string/timer_60_min" />
            <item
                android:id="@+id/timer_custom"
                android:title="@string/timer_custom" />
        </menu>
    </item>
    
    <item
        android:id="@+id/menu_ab_repeat"
        android:title="@string/ab_repeat">
        <menu>
            <item
                android:id="@+id/ab_set_point_a"
                android:title="@string/set_point_a" />
            <item
                android:id="@+id/ab_set_point_b"
                android:title="@string/set_point_b" />
            <item
                android:id="@+id/ab_clear_points"
                android:title="@string/clear_ab_points" />
        </menu>
    </item>
    
    <item
        android:id="@+id/menu_mixer"
        android:title="@string/music_mixer">
        <menu>
            <item
                android:id="@+id/mixer_select_second"
                android:title="@string/select_second_audio" />
            <item
                android:id="@+id/mixer_browse_second"
                android:title="@string/second_audio" />
            <item
                android:id="@+id/mixer_clear_second"
                android:title="@string/clear_second_audio" />
            <item
                android:id="@+id/mixer_balance"
                android:title="@string/adjust_balance" />
        </menu>
    </item>
</menu> 